--- a/glorify/index.html
+++ b/glorify/index.html
@@ -6,136 +6,73 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-  <meta name="title" content="Vicky W. | UX Designer | GLORIFY">
-  <title>Vicky W. | UX Designer | GLORIFY </title>
-  <link rel="canonical" href="https://vickywang.me/glorify/">
-  <meta name="author" content="Vicky W.">
-
   <!-- Basic Metadata -->
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-  ">
-
+  <link rel="canonical" href="https://vickywang.me/glorify">
+  <title>Enhancing Community Engagement in Glorify - Vicky Wang</title>
+  <meta name="author" content="Vicky W.">
+  <meta name="description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer | GLORIFY" />
-  <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me" />
+  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:url" content="https://vickywang.me/glorify">
   <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
 
-  <meta property='og:image' content="https://vickywang.me/image/Cover_Glorify.png" />
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="627">
-  <meta property="og:image:type" content="image/jpeg">
-  <!-- linkedin -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky's Website" />
-  <meta name="twitter:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
-  <meta name="twitter:image" content="https://vickywang.me/image/Cover_Glorify.png" />
-  <meta name="twitter:url" content="//vickywang.me/">
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <!-- twitter -->
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-  <link rel="manifest" href="../site.webmanifest">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/glorify">
+  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
+
   <!-- favicon -->
 
-  <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 
 
-
+  <!-- Google Font Preconnect-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
+  <!-- Google Font Preconnect-->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--special font-family: 'Train One'; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - Hi Melody-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - shadows into light-->
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: La Belle Aurore; -->
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat'; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
+
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah'; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!--handwriting Edu SA Beginner font-family: 'Edu SA Beginner', cursive; -->
-
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <!--font awesome -->
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
-
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <!--jQuery 07182022-->
+
+  <!--aos-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--aos-->
 
 
+  <!-- google analytics-->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -143,10 +80,10 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 
-
-
+  <link rel="stylesheet" href="../main.css">
+  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
 
 
 </head>
@@ -167,7 +104,7 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
+          <li class="dropdown nav-item active activeNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
 
               <a href="/seer/">
@@ -367,7 +304,7 @@
     <!-- Slideshow Title -->
 
     <div class="paddingM wrapper">
-      <div class="rowVW cardGlorifyBg shadowBox centerVer">
+      <div class="rowToColumn cardGlorifyBg shadowBox centerVer">
         <div class="widthMax paddingM">
           <h4>Glorify is a mobile app offering an expansive library of resources designed to aid Christians in their
             spiritual journey. From daily devotionals to scripture readings and prayer guides, the app aims to be a
@@ -639,7 +576,7 @@
 
 
       <div class="paddingM">
-        <div class="rowVW cardGlorify shadowBox centerVer">
+        <div class="rowToColumn cardGlorify shadowBox centerVer">
           <div class="widthMax paddingM">
             <h4> To address the current lack of social and community features, I am focused on enhancing the user
               experience by integrating community options.
@@ -749,7 +686,7 @@
           <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
         </div>
         <div class="paddingM">
-          <div class="rowVW cardGlorify shadowBox centerVer">
+          <div class="rowToColumn cardGlorify shadowBox centerVer">
             <div class="widthMax paddingS">
               <h4 class="">The goal is to create the first version of a Christian community on the Glorify
                 platform to boost user
@@ -2396,7 +2333,7 @@
           <img class="modal-target" src="Research_Diagram_Design.svg" alt="Design Process">
         </div>
         <div class="paddingM">
-          <div class="rowVW cardGlorify shadowBox centerVer">
+          <div class="rowToColumn cardGlorify shadowBox centerVer">
             <div class="widthMax paddingM">
               <h4>Based on concept testing, the group prayer option received positive feedback for encouraging open
                 interaction, insight-sharing, and active participation. It's also easy to engage with and low-pressure.
@@ -3446,7 +3383,7 @@
         </div>
 
         <div class="paddingM">
-          <div class="rowVW cardGlorify shadowBox centerVer">
+          <div class="rowToColumn cardGlorify shadowBox centerVer">
             <div class="widthMax paddingM">
               <h4>To reduce the one-minute navigation time for creating and joining group worship, conduct tree testing
                 to streamline the group prayer flow. Ensure the experience is straightforward and seamless.
@@ -4554,7 +4491,7 @@
         </div>
 
         <div class="paddingM">
-          <div class="rowVW cardGlorifyBg shadowBox centerVer">
+          <div class="rowToColumn cardGlorifyBg shadowBox centerVer">
             <div class="widthMax paddingM">
               <h4>The high-fidelity prototype is designed based on user research to address specific needs: fostering
                 shared faith, mutual understanding, support, and opportunities for connection. We'll test and fine-tune
@@ -5052,7 +4989,7 @@
             </div>
           </div>
           <div class="paddingM">
-            <div class="rowVW cardGlorifyBg shadowBox centerVer">
+            <div class="rowToColumn cardGlorifyBg shadowBox centerVer">
               <div class="widthMax paddingM">
                 <h4>After working mainly on productivity apps, this is my initial venture into creating Faith-based
                   Community Apps. This project has opened new doors for me into the world of spiritual social
@@ -5234,12 +5171,69 @@
 
 
 
+  <div class="blankHM"></div>
+
+  <!-- Arrow -->
+  <div class="wrapper">
+    <div class="element">
+      <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+      </h2>
+    </div>
+  </div>
+  <!-- Arrow -->
+  <div class="blankHM"></div>
+
+  <div class="Grid Grid--full u-textCenter">
+
+    <ul class="tags">
+
+      <li class="tag"><span class="box"> User-centered Design</span></li>
+
+      <li class="tag"><span class="box"> Experience Design</span></li>
+      <li class="tag"><span class="box"> User Experience Design </span></li>
+      <li class="tag"><span class="box"> User Interface Design</span></li>
+      <li class="tag"><span class="box"> Interaction Design</span></li>
+
+      <li class="tag"><span class="box"> Product Design</span></li>
+      <li class="tag"><span class="box"> Service Design</span></li>
+
+      <li class="tag"><span class="box"> Design Thinking</span></li>
+      <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
+      <li class="tag"><span class="box"> Journey Mapping </span></li>
+      <li class="tag"><span class="box"> Data Analysis </span></li>
 
 
 
+      <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
+      <li class="tag"><span class="box"> Web Application Design</span></li>
+      <li class="tag"><span class="box"> Design System</span></li>
+      <li class="tag"><span class="box"> Graphic Design</span></li>
+
+      <li class="tag"><span class="box"> UX Research</span></li>
+      <li class="tag"><span class="box"> Design Research</span></li>
+
+      <li class="tag"><span class="box"> Design Research</span></li>
+      <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
+      <li class="tag"><span class="box"> Concept Testing</span></li>
+      <li class="tag"><span class="box"> Usability Testing</span></li>
+      <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+      <li class="tag"><span class="box"> Figma</span></li>
+      <li class="tag"><span class="box"> Adobe CS </span></li>
+      <li class="tag"><span class="box"> 3D Modeling</span></li>
+
+      <li class="tag"><span class="box">HTML</span></li>
+      <li class="tag"><span class="box">CSS</span></li>
+      <li class="tag"><span class="box">JavaScript</span></li>
+      <li class="tag"><span class="box">GitHub</span></li>
+
+    </ul>
+  </div>
+
+  <!-- message -->
+  <div class="blankHM"></div>
 
 
-  <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h4 class="element">Thanks for stopping by! Hop over to my site for more stuff&#33;</h4>
@@ -5250,6 +5244,7 @@
   </div>
   <div class="blankHL"></div>
 
+  <!-- message -->
 
 
 
@@ -5288,7 +5283,7 @@
   <div class="wrapper">
     <div class="element">
 
-      <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid Grid--gutters Grid--1of3">
         <div class="Grid-cell">
 
           <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
@@ -5328,18 +5323,21 @@
               <h5> <strong> Project </strong> </h5>
               <div class="blankHXXS"></div>
               <a href="/glorify/">
-                <h6> <strong class="Grey700">Glorify</strong> </h6>
+                <h6 class="fontWeight400"> Glorify</h6>
               </a>
+
 
               <h6>Elevating Community Involvement</h6>
               <div class="blankHXXS"></div>
               <a href="/appointa/">
-                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                <h6 class="fontWeight400"> APPOINTA</h6>
+
               </a>
               <h6>Simplifying Interview Coordination</h6>
               <div class="blankHXXS"></div>
               <a href="/seer/">
-                <h6> <strong class="Grey700">SEER</strong> </h6>
+                <h6 class="fontWeight400">SEER</h6>
+
               </a>
               <h6>Empowering Brand Managers with Insights</h6>
             </div>
@@ -5348,19 +5346,25 @@
               <h5> <strong> Service </strong> </h5>
               <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">UX/UI Design</h6>
+              </a>
               <h6>Creating Intuitive User Experiences</h6>
               <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">Design Research</h6>
+              </a>
               <h6>In-depth Analysis for Targeted Solutions</h6>
               <div class="blankHXXS"></div>
-
-              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">Web Development</h6>
+              </a>
               <h6>Seamless Design Implementation</h6>
               <div class="blankHXXS"></div>
-
-              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">Branding</h6>
+              </a>
               <h6>Crafting Memorable Brand Identities</h6>
             </div>
 
@@ -5371,23 +5375,22 @@
               <a href="/about">
                 <h6>About me</h6>
               </a>
-              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              <a href="mailto:vickyw.design@gmail.com">
+                <h6>Email me</h6>
+              </a>
             </div>
           </div>
-        </div>
 
+        </div>
       </div>
     </div>
-
-  </div>
-
-
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class=" footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
         </div>
       </div>
     </div>
