--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <title>Vicky W. | UX Designer for B2B Solutions & Consumer Apps </title>
-
   <link rel="canonical" href="https://vickywang.me/">
+  <title>Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang </title>
+  <meta name="title" content="UX Designer for B2B Solutions & Consumer Apps">
   <meta name="author" content="Vicky W.">
   <meta name="description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
@@ -26,7 +26,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
@@ -138,21 +138,31 @@
       <div class="element">
 
         <p class="t-hello">hello, I'm Vicky. </p>
-
-        <div class="intro" data-aos="fade-up">
-          <div class="column">
-            <div class="Grid Grid--gutters">
-              <div class="Grid-cell">
-                <strong>
-                  <div class="intro">
-                    <h1> UX designer &nbsp;</h1>
-                    <span class="divider1"></span>
-                    <h1> Product designer </h1>
-                  </div>
-                </strong>
+        <div class="row">
+          <div class="widthMax">
+            <strong>
+              <div class="intro" data-aos="fade-up">
+                <h1> UX designer &nbsp;</h1>
+                <span class="divider1"></span>
+                <h1> Product designer </h1>
               </div>
-            </div>
+            </strong>
+          </div>
 
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <div class="dropdownSM">
+                <img title="Share" class="iconM hoverGrey100 paddingMax borderRadiusMax dropbtn" src="./icon/share.svg"
+                  alt="Share">
+                <div class="dropdownSM-content">
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me"
+                    target="_blank">Share on LinkedIn</a>
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang"
+                    target="_blank">Share on Pinterest</a>
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
 
@@ -349,13 +359,14 @@
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
-        <h2 class="tArrow">Design System &#38; Navigation <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+        <h2 class="tArrow">Design System &#38; Navigation <img class="seArrow" src="./icon/arrow-se.svg"
+            alt="icon arrow"></h2>
       </div>
     </div>
     <!-- Arrow -->
     <div class="blankHXS"></div>
     <div class="wrapper">
-      
+
 
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
