--- a/about/index.html
+++ b/about/index.html
@@ -1,15 +1,14 @@
 <html lang="en">
 
 <head>
-  
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <title>Vicky W. | UX Designer for B2B Solutions & Consumer Apps </title>
-
   <link rel="canonical" href="https://vickywang.me/about">
+  <title>Professional Background and Interests - Vicky Wang</title>
   <meta name="author" content="Vicky W.">
   <meta name="description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
@@ -107,6 +106,8 @@
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
           </li>
+          <li class="nav-item inactive marginZero"><a href="/blog/" class="nav-link box">BLOG</a></li>
+
           <li class="nav-item active activeNav marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
         </ul>
       </div>
@@ -126,10 +127,11 @@
       <div class="intro">
         <div class="t-hello">hi there! </div>
       </div>
-      <div class="intro" data-aos="fade-up">
-        <div class="column">
+
+      <div class="row">
+        <div class="widthMax">
           <strong>
-            <div class="intro">
+            <div class="intro" data-aos="fade-up">
               <h1> Product &nbsp;</h1>
               <span class="divider1"></span>
               <h1> Design &nbsp;</h1>
@@ -139,11 +141,28 @@
               <h1> Art </h1>
             </div>
           </strong>
-          <div class="blankHXS"></div>
+        </div>
+        <div class="paddingleft">
+          <div class="widthFitContent">
+            <div class="dropdownSM">
+              <img title="Share" class="iconM hoverGrey100 paddingMax borderRadiusMax dropbtn" src="../icon/share.svg"
+                alt="Share">
+              <div class="dropdownSM-content">
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/about"
+                  target="_blank">Share on LinkedIn</a>
+
+                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/ProjectImages/thumbnail_mobile.svg&description=Professional%20Background%20and%20Interests%20-%20Vicky%20Wang"
+                  target="_blank">
+                  Share on Pinterest
+                </a>
+
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
-
-      <div class="rowVW centerVH">
+      <div class="rowToColumn centerVH">
         <div class="widthMax">
           <div class="Grid-cell">
 
@@ -336,7 +355,9 @@
 
               <li class="progress__item progress__item--active" data-aos="fade-up">
                 <h3> <strong>User experience design </strong> </h3>
-                <p>User experience design is about comprehending the user's desires and behaviors to create products that are intuitive and fulfilling. It combines an attractive design with a user-friendly interface, grounded in an understanding of human psychology and current technology trends.
+                <p>User experience design is about comprehending the user's desires and behaviors to create products
+                  that are intuitive and fulfilling. It combines an attractive design with a user-friendly interface,
+                  grounded in an understanding of human psychology and current technology trends.
 
 
 
@@ -535,6 +556,63 @@
     </div>
   </div>
   <!-- About me -->
+  <div class="blankHM"></div>
+
+  <!-- Arrow -->
+  <div class="wrapper">
+    <div class="element">
+      <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+      </h2>
+    </div>
+  </div>
+  <!-- Arrow -->
+  <div class="blankHM"></div>
+
+  <div class="Grid Grid--full u-textCenter">
+
+    <ul class="tags">
+
+      <li class="tag"><span class="box"> User-centered Design</span></li>
+
+      <li class="tag"><span class="box"> Experience Design</span></li>
+      <li class="tag"><span class="box"> User Experience Design </span></li>
+      <li class="tag"><span class="box"> User Interface Design</span></li>
+      <li class="tag"><span class="box"> Interaction Design</span></li>
+
+      <li class="tag"><span class="box"> Product Design</span></li>
+      <li class="tag"><span class="box"> Design Thinking</span></li>
+      <li class="tag"><span class="box"> Surveys &#38; Questionnaires</span></li>
+      <li class="tag"><span class="box"> Journey Mapping </span></li>
+      <li class="tag"><span class="box"> Data Analysis </span></li>
+
+
+
+      <li class="tag"><span class="box"> Responsive &#38; Adaptive Design</span></li>
+      <li class="tag"><span class="box"> Web Application Design</span></li>
+      <li class="tag"><span class="box"> Design System</span></li>
+      <li class="tag"><span class="box"> Graphic Design</span></li>
+
+      <li class="tag"><span class="box"> UX Research</span></li>
+      <li class="tag"><span class="box"> Design Research</span></li>
+
+      <li class="tag"><span class="box"> Design Research</span></li>
+      <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
+      <li class="tag"><span class="box"> Concept Testing</span></li>
+      <li class="tag"><span class="box"> Usability Testing</span></li>
+      <li class="tag"><span class="box"> Wireframing &#38; Prototyping</span></li>
+
+      <li class="tag"><span class="box"> Figma</span></li>
+      <li class="tag"><span class="box"> Adobe CS </span></li>
+      <li class="tag"><span class="box"> 3D Modeling</span></li>
+
+      <li class="tag"><span class="box">HTML</span></li>
+      <li class="tag"><span class="box">CSS</span></li>
+      <li class="tag"><span class="box">JavaScript</span></li>
+      <li class="tag"><span class="box">GitHub</span></li>
+
+    </ul>
+  </div>
+  <div class="blankHM"></div>
   <!-- message -->
   <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
@@ -570,7 +648,7 @@
   <div class="wrapper">
     <div class="element">
 
-      <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid Grid--gutters Grid--1of3">
         <div class="Grid-cell">
 
           <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
@@ -610,18 +688,21 @@
               <h5> <strong> Project </strong> </h5>
               <div class="blankHXXS"></div>
               <a href="/glorify/">
-                <h6> <strong class="Grey700">Glorify</strong> </h6>
+                <h6 class="fontWeight400"> Glorify</h6>
               </a>
+
 
               <h6>Elevating Community Involvement</h6>
               <div class="blankHXXS"></div>
               <a href="/appointa/">
-                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                <h6 class="fontWeight400"> APPOINTA</h6>
+
               </a>
               <h6>Simplifying Interview Coordination</h6>
               <div class="blankHXXS"></div>
               <a href="/seer/">
-                <h6> <strong class="Grey700">SEER</strong> </h6>
+                <h6 class="fontWeight400">SEER</h6>
+
               </a>
               <h6>Empowering Brand Managers with Insights</h6>
             </div>
@@ -630,19 +711,25 @@
               <h5> <strong> Service </strong> </h5>
               <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">UX/UI Design</h6>
+              </a>
               <h6>Creating Intuitive User Experiences</h6>
               <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">Design Research</h6>
+              </a>
               <h6>In-depth Analysis for Targeted Solutions</h6>
               <div class="blankHXXS"></div>
-
-              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">Web Development</h6>
+              </a>
               <h6>Seamless Design Implementation</h6>
               <div class="blankHXXS"></div>
-
-              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <a href="/">
+                <h6 class="fontWeight400">Branding</h6>
+              </a>
               <h6>Crafting Memorable Brand Identities</h6>
             </div>
 
@@ -653,23 +740,22 @@
               <a href="/about">
                 <h6>About me</h6>
               </a>
-              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              <a href="mailto:vickyw.design@gmail.com">
+                <h6>Email me</h6>
+              </a>
             </div>
           </div>
-        </div>
 
+        </div>
       </div>
     </div>
-
-  </div>
-
-
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class=" footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
         </div>
       </div>
     </div>
