--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -4,95 +4,74 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Museum Design & Cultural Spaces by Vicky Wang">
 
-
-  <meta name="title" content="Vicky W. | LACAMA">
-  <title>Vicky W. | LACAMA</title>
   <link rel="canonical" href="https://vickywang.me/architecture/LACAMA/">
+  <title>Museum Design & Cultural Spaces by Vicky Wang</title>
   <meta name="author" content="Vicky W.">
+  <meta name="description"
+    content="Explore the LACAMA Project by Vicky Wang, redefining museum design and cultural spaces. A blend of architectural brilliance and cultural appreciation.">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:url" content="https://vickywang.me/architecture">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
 
-  <!-- Basic Metadata -->
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-  ">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/architecture">
+  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property='og:title' content="Vicky Wang | UX Designer | Thesis Studio" />
-    <meta property='og:description'
-      content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-    <meta property='og:url' content="https://vickywang.me/architecture/LACAMA/" />
-    <meta property="og:site_name" content="Vicky's Website">
-  
-    <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="627">
-    <meta property="og:image:type" content="image/jpeg">
-    <!-- linkedin -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@vickyw_design" />
-    <meta name="twitter:title" content="Vicky's Website" />
-    <meta name="twitter:description"
-      content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
-    <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
-    <meta name="twitter:url" content="//vickywang.me/">
-    <meta name="twitter:creator" content="VICKY WANG" />
-    <!-- twitter -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
-    <!-- favicon -->
+  <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 
 
-
-
-  <link rel="stylesheet" href="../../main.css">
-  <script type="text/javascript" src="../../scripts.js"></script>
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Titillium Web', sans-serif; -->
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Roboto', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--font using hello-->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Catamaran', sans-serif; -->
+  <!-- Google Font Preconnect-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Font Preconnect-->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--font font-family: 'Lato', sans-serif; -->
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <!--font awesome -->
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
 
-
-
-
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
-
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
+
+  <!--aos-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--aos-->
-  
 
+
+  <!-- google analytics-->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -100,8 +79,14 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 
+
+
+
+
+
+  <link rel="stylesheet" href="../../main.css">
+  <script type="text/javascript" src="../../scripts.js"></script>
 </head>
 
 
@@ -152,19 +137,19 @@
         </div>
       </div>
       <div class="Grid-cell">
-          <div class="element">
-              <div class="elementInner">
-                <h3 class="" data-aos="fade-up"><strong>LACAMA</strong></h3>
+        <div class="element">
+          <div class="elementInner">
+            <h3 class="" data-aos="fade-up"><strong>LACAMA</strong></h3>
 
-                <p class="lineHorizAll"></p>
-                <h6 class=""> <strong>Studio:</strong> &nbsp; ARCH 201 </h6>
-                <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2016 | One
-                    Semester</span> </h6>
-                <h6> <strong>Project:</strong> &nbsp; M. Arch, CED, UC Berkeley</h6>
-                <h6> <strong>Site:</strong> &nbsp; Los Angeles County Museum of Art</h6>
-                <h6> <strong>Instructor:</strong> &nbsp; Mark Anderson, Andrew Zago</h6>
-            </div>
+            <p class="lineHorizAll"></p>
+            <h6 class=""> <strong>Studio:</strong> &nbsp; ARCH 201 </h6>
+            <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2016 | One
+                Semester</span> </h6>
+            <h6> <strong>Project:</strong> &nbsp; M. Arch, CED, UC Berkeley</h6>
+            <h6> <strong>Site:</strong> &nbsp; Los Angeles County Museum of Art</h6>
+            <h6> <strong>Instructor:</strong> &nbsp; Mark Anderson, Andrew Zago</h6>
           </div>
+        </div>
       </div>
 
     </div>
@@ -642,120 +627,120 @@
   </button>
   <!--back to top-->
 
-<!--footer-->
-<footer class="GreyBg100">
+  <!--footer-->
+  <footer class="GreyBg100">
 
-  <div class="blankHS"></div>
-  <div class="wrapper">
-    <div class="element">
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="element">
 
-      <div class="Grid Grid--gutters Grid--1of3 ">
-        <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--1of3 ">
+          <div class="Grid-cell">
 
-          <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-          <div class="blankHXS"></div>
+            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly">
-                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                  title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com</p>
-              </button>
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                  title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+              </a>
+
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                  title="Instagram">
+              </a>
             </div>
-            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
-            </a>
-
-            <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
-                title="GitHub">
-            </a>
-
-            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
-            </a>
-
-            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
-                title="Instagram">
-            </a>
+            <div class="blankHXS"></div>
           </div>
-          <div class="blankHXS"></div>
-        </div>
-        <div class="Grid-cell">
-          <div class="Grid Grid--gutters Grid--cols-6">
-            <div class="Grid-cell">
-              <h5> <strong> Project </strong> </h5>
-              <div class="blankHXXS"></div>
-              <a href="/glorify/">
-                <h6> <strong class="Grey700">Glorify</strong> </h6>
-              </a>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-6">
+              <div class="Grid-cell">
+                <h5> <strong> Project </strong> </h5>
+                <div class="blankHXXS"></div>
+                <a href="/glorify/">
+                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                </a>
 
-              <h6>Elevating Community Involvement</h6>
-              <div class="blankHXXS"></div>
-              <a href="/appointa/">
-                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-              </a>
-              <h6>Simplifying Interview Coordination</h6>
-              <div class="blankHXXS"></div>
-              <a href="/seer/">
-                <h6> <strong class="Grey700">SEER</strong> </h6>
-              </a>
-              <h6>Empowering Brand Managers with Insights</h6>
-            </div>
+                <h6>Elevating Community Involvement</h6>
+                <div class="blankHXXS"></div>
+                <a href="/appointa/">
+                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+                <div class="blankHXXS"></div>
+                <a href="/seer/">
+                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+              </div>
 
-            <div class="Grid-cell">
-              <h5> <strong> Service </strong> </h5>
-              <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> Service </strong> </h5>
+                <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-              <h6>Creating Intuitive User Experiences</h6>
-              <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <h6>Creating Intuitive User Experiences</h6>
+                <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700">Design Research </strong> </h6>
-              <h6>In-depth Analysis for Targeted Solutions</h6>
-              <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <h6>In-depth Analysis for Targeted Solutions</h6>
+                <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700">Web Development </strong> </h6>
-              <h6>Seamless Design Implementation</h6>
-              <div class="blankHXXS"></div>
+                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <h6>Seamless Design Implementation</h6>
+                <div class="blankHXXS"></div>
 
-              <h6> <strong class="Grey700">Branding </strong> </h6>
-              <h6>Crafting Memorable Brand Identities</h6>
-            </div>
+                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <h6>Crafting Memorable Brand Identities</h6>
+              </div>
 
-            <div class="Grid-cell">
-              <h5> <strong> About </strong> </h5>
-              <div class="blankHXXS"></div>
+              <div class="Grid-cell">
+                <h5> <strong> About </strong> </h5>
+                <div class="blankHXXS"></div>
 
-              <a href="/about">
-                <h6>About me</h6>
-              </a>
-              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+                <a href="/about">
+                  <h6>About me</h6>
+                </a>
+                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+              </div>
             </div>
           </div>
-        </div>
 
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class=" footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
+        </div>
       </div>
     </div>
 
-  </div>
-
-
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class=" footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</footer>
-<!--footer-->
+  </footer>
+  <!--footer-->
 </body>
 
 
