--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
+
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <title>Vicky W. | UX Designer | Design System </title>
-  <link rel="canonical" href="https://vickywang.me/design_system/">
+  <link rel="canonical" href="https://vickywang.me/design_system">
+  <title>Design System Principles by Vicky Wang</title>
   <meta name="author" content="Vicky W.">
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User Interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
-
+  <meta name="description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vicky W. | UX Designer | Projects">
-  <meta property="og:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
-  <meta property="og:url" content="https://vickywang.me/">
+  <meta property="og:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="og:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:url" content="https://vickywang.me/design_system">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Vicky W. | UX Designer | Projects">
-  <meta property="twitter:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta property="twitter:url" content="https://vickywang.me/design_system">
+  <meta property="twitter:title" content="Vicky W. | UX Designer for B2B Solutions & Consumer Apps">
+  <meta property="twitter:description"
+    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://vickywang.me/projectimages/Cover_portfolioWeb.svg">
 
   <!-- favicon -->
@@ -40,97 +39,42 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
-
-  <link type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.26.0/prism.min.js">
-  </link>
 
 
-
+  <!-- Google Font Preconnect-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
+  <!-- Google Font Preconnect-->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--special font-family: 'Train One'; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--special font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - Hi Melody-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - shadows into light-->
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: La Belle Aurore; -->
+  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat'; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-  <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
+
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah'; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!--handwriting Edu SA Beginner font-family: 'Edu SA Beginner', cursive; -->
-
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <!--font awesome -->
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
     integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
-
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <!--jQuery 07182022-->
+
+  <!--aos-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--aos-->
 
 
+  <!-- google analytics-->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -138,11 +82,12 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 
 
 
-
+  <link rel="stylesheet" href="../main.css">
+  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
 
 </head>
 
@@ -1936,7 +1881,7 @@
             </div>
           </div>
           <div class="blankHXS"></div>
-          <div class="rowVW">
+          <div class="rowToColumn">
             <div class="widthMax">
               <div class="Demo ">
                 <div class="elementInnerDemo max-width"></div>
@@ -1953,7 +1898,7 @@
               <div class="codeTiltle">HTML</div>
 
               <code>
-                &lt;div class="rowVW"&gt;
+                &lt;div class="rowToColumn"&gt;
                   &lt;div class="widthMax"&gt;
                     &lt;div class="Demo "&gt;
                       &lt;div class="elementInnerDemo max-width"&gt;&lt;/div&gt;
@@ -3426,7 +3371,7 @@
         <div class="blankHXS"></div>
 
         <div class="element">
-          <div class="rowVW cardAPPOINTA shadowBox wrapper centerVer">
+          <div class="rowToColumn cardAPPOINTA shadowBox wrapper centerVer">
             <div class="widthMax paddingM">
               <h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -3666,7 +3611,7 @@
                     &lt;/ul&gt;
                     &lt;div class="blankHXS"&gt;&lt;/div&gt;
                   &lt;/div&gt;
-                  &lt;button class="buttonTextOnly" onclick="toggleContent(this)"&gt;Read More &amp;#8744;&lt;/button&gt;
+                  &lt;button class="toggle buttonTextOnly" &gt;Read More &amp;#8744;&lt;/button&gt;
                 &lt;/div&gt;
               &lt;/div&gt;
             &lt;/div&gt;
